--- a/src/styles/HighlightsSection.css
+++ b/src/styles/HighlightsSection.css
@@ -187,6 +187,10 @@
   transform: scaleX(-1);
 }
 
+.highlights__fighter-img--mobile {
+  display: none;
+}
+
 .highlights__qr-wrapper {
   position: absolute;
   right: 18px;
@@ -264,6 +268,14 @@
   }
 
   .highlights__title--mobile {
+    display: block;
+  }
+
+  .highlights__fighter-img--desktop {
+    display: none;
+  }
+
+  .highlights__fighter-img--mobile {
     display: block;
   }
 
